corporate/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: corp-wordpress
  name: corp-wordpress
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: corp-wordpress
